# minishell

./: .gitignore  .gitmodules  .ministory  CMakeLists.txt  Makefile  README.md  test  valid
include/: commands.h  completion.h  config.h  debug.h  define.h  environment.h  execution.h  funcs.h  global.h  history.h  memory.h  minishell.h  parsing.h  struct.h  terminal.h  wildcard.h
libft/: .gitignore  CMakeLists.txt  Makefile  README.md
libft/include/: colors.h  libft.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_charjoin.c  ft_count_words.c  ft_dtoa.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putlnbr_fd.c  ft_putnbr_base_fd.c  ft_putnbr_fd.c  ft_putnbr_float_fd.c  ft_putnbr_unsigned_fd.c  ft_putpointer_fd.c  ft_putstr_fd.c  ft_realloc.c  ft_setdtoa.c  ft_setitoa.c  ft_split.c  ft_str_count_char.c  ft_str_count_chars.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  (+16 more)
libft/src/ft_printf/: ft_printf.c
libft/src/get_next_line/: get_next_line.c
libft/src/lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstprint.c  ft_lstsize.c
libft/src/mem/: ft_freetab.c
parsing/: a.out  main.c
read/: a.out  main.c
signal/: a.out  main.c
src/: .ministory  main.c
src/atcp/: tab.c
src/atcp/dictionnary/: bst.c  bst_insert.c  copy_cut_bst.c  free_bst.c  print_bst.c  setup_dico.c
src/command/: executor.c  history.c
src/commands/: command_maker.c  command_manager.c  flags_utils.c
src/commands/custom/: cd.c  cd_utils.c  echo.c  env.c  exit.c  exit_utils.c  export.c  export_add.c  history.c  pwd.c  unset.c
src/commands/custom/export_cmd/: export.c  quicksort.c
src/config/: term_config.c
src/debug/: debug_execution.c  debug_history.c  debug_parsing.c  debug_parsing_utils.c
src/environment/: env_utils.c  env_variable.c  path_utils.c  variable_replacer.c  variable_utils.c
src/execution/: execute_cmd.c  execute_cmds.c  execute_path.c  execution.c  execution_fork.c  execution_heredoc.c  execution_heredoc_pid.c  execution_heredoc_read_write.c  execution_heredoc_utils.c  execution_or_and.c  execution_pipes.c  execution_types.c  execution_verif.c  executor.c  pipe.c  pipes.c  pipes_utils.c  redirections.c  redirections_input.c  redirections_output.c  signal_handler.c
src/history/: history.c  history_file.c  history_management.c  history_navigation.c
src/memory/: builtins_alloc.c  memory_alloc.c  memory_free.c
src/parsing/: ast.c  ast_creation.c  ast_management.c  parser.c  parsing.c  parsing_args.c  parsing_bonus.c  parsing_debug.c  parsing_mandatory.c  parsing_redirection.c  parsing_utils.c  tokenizer.c  var_creation.c
src/parsing/tokenizer/: split_quote_utils.c  split_with_quote.c  token_extractor.c  token_management.c  tokenizer.c  tokenizer_quote.c  tokenizer_quote_handler.c
src/sig/: raw.c  sig_handler.c
src/terminal/: erase_put.c  executor.c  history.c  input_utils.c  my_tgetent.c  put_in_string.c  terminal.c  terminal_action.c  terminal_arrow.c  terminal_cursor.c  terminal_info.c  terminal_information.c  terminal_prompt.c  terminal_signals.c  terminal_utils.c  terminal_variable.c
src/wildcard/: wildcard.c  wildcard_utils.c
tests/: main.c  run.sh  strcspn.c  termios  termios.c
tests/cmake/: CMakeLists.txt  main.c
tests/include/: Tester.h  TesterQuote.h  TesterStrSplit.h
tests/quotes/: quotes  quotes.c
tests/src/: main.cpp
tests/src/tester/: TesterQuote.cpp  TesterStrSplit.cpp
tests/termios/: Makefile  termios.c  termios.h
